Align scheduled use cases with FSSB